--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.class
+*.log
+bin
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,3 +12,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#eclipse files
+*.project
+*.classpath
+*.prefs
+*.settings
+
+#maven files
+target
+
+#IntelliJ
+*.imls
+*.iml
+.idea/
+
+#Mac
+.DS_Store
